# contrapi

./: .gitignore  README.md  alembic.ini  jwt_manager.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 621c9fe10c56_mover_is_active_a_la_tabla_de_usuarios.py  ba18de027bb0_.py
config/: db_setup.py
models/: course.py  plan.py  user.py
routes/: plan.py  user.py
schemas/: plan.py  seguimiento.py  user.py
